Installation script update